# NeuralNetworks

./: README.md
NNs/: Cargo.toml
NNs/src/: activations.rs  lib.rs  main.rs  model.rs  network.rs  neural_nets.rs
NNs/src/neural_nets/: activations.rs  network.rs
