[package]
name = "NeuralNetworks"
version = "0.0.1"
authors = ["eigaming520@gmail.com"]

[lib]
name = "neural_networks"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
